--- a/style.css
+++ b/style.css
@@ -1,182 +1,1 @@
-/*Định dạng front-end */ 
-:root{
-    --text-font: 'Boiling Demo Black'; 
-    --happy-font: 'TRIAL Englisch'; 
-    --para-font: 'MT Dalat Sans'; 
-    --time-font: 'DS-Digital'; 
-}
-* {
-    box-sizing: border-box; 
-    text-align: center;
-  
-}
-label 
-{
-    font-family: 'DS Digital';
-}
-body 
-{
-    background-color: #FFE1FF;
-}
-.my-form {
-    margin: auto; 
-    width: 350px; 
-    height: 550px; 
-    background-color: #BCF2F6;
-    display: flex;
-    flex-direction: column;
-    position: relative;
-}
-.my-form-1
-{
-    flex: 2; 
-    display: flex;
-    flex-direction: column;
-    border-bottom: 2px dotted black;
-}
-.my-form-1-img
-{
-    flex: 2;  
-    background-color: #BCF2F6;
-    padding-top: 20px; 
-    display: flex; 
-    justify-content: center;
-    align-content: center;
-}
-.my-form-1-title
-{
-    flex: 1; 
-    background-color: #BCF2F6;
-    text-align: center; 
-}
-h2
-{
-    font-family: var(--happy-font);
-    margin-top: 2px; 
-    margin-bottom: -2px; 
-    font-size: 20px; 
-    font-family: var(--happy-font); 
-}
-h2:nth-child(3) 
-{
-    margin-bottom: 4px; 
-}
-h2:first-child
-{
-    font-size: 26px; 
-    margin-bottom: 5px;
-    font-family: var(--happy-font); 
-}
-h2:nth-child(2)
-{
-    font-family: 'Sugar Magic - Personal Use Only';
-    margin: 0px; 
-    font-size: 35px; 
-}
-@keyframes rotate {
-    from {
-        transform: rotate(0deg);
-    }
-    to {
-        transform: rotate(360deg);
-    }
-} 
-.img1  /*Avatar image */ 
-{
-    border-radius: 50%;
-    height: 220px; 
-    width: 220px; 
-    background-color: #fff;
-    margin: auto; 
-    margin-top: -25px; 
-    position: relative;  
-    /* top: 50%; */ 
-    background-image: url(https://png.pngtree.com/png-clipart/20230122/original/pngtree-beautiful-kids-birthday-balloons-for-happy-png-image_8927207.png);
-    background-size: 100% 100%;
-    /*transform: translateY(-50%); */ 
-    
-}
-.rotate {
-    animation: rotate 5s linear infinite;
-}
-.my-form-2 {
-    flex: 1; 
-    background-color: #08C2FF; 
-    padding: 6px 35px; 
-    font-size: 16.5px; 
-    color: white; 
-}
-p:first-child, p:nth-child(3) { /*Loi chuc dau tien  */ 
-    text-align: left; 
-    text-wrap: nowrap;
-    margin-top: 15px; 
-    margin-bottom: 8px;
-    font-weight: bold;
-    font-size: 14.5px; 
-    font-family: var(--text-font);
-}
-p:nth-child(2) /*Text*/ 
-{
-    
-    text-align:left; 
-    margin: 0px; 
-    font-size: 13px; 
-    margin-bottom: 8px;
-    font-family: var(--para-font); 
-}
-p:nth-child(3) /*best wish*/ 
-{
-    margin-top: 8px; 
-    font-size: 12.5px; 
-}
-audio 
-{
-    width: 1px; 
-    height: 1px; 
-    opacity: 0;
-}
-#button1 
-{
-    border-radius: 50%;
-    width: 40px; 
-    height: 40px; 
-    border-style: solid;
-    font-size: 25px; 
-    background-color: white;
-    border-color: #08C2FF;
-    margin: 0px; 
-    position: relative; 
-    margin-top: 15px; 
-    margin-left: 15px; 
-}
-label 
-{
-    font-family: var(--time-font);
-    font-size: 40px; 
-    margin: 0px; 
-    display: inline;
-    font-weight: 600;
-    position: absolute;
-    right: 0; 
-    top: 0; 
-    right: 10px; 
-    top: 10px; 
-}
-i {
-    margin: auto; 
-    position: relative;
-    top: 50%; 
-    color: #08C2FF; 
-    transform: translateY(-50%); 
-}
-/*Nhúng eff */ 
-
-    canvas {
-            position: fixed;
-            top: 0;
-            left: 0;
-            width: 100%;
-            height: 100%;
-            z-index: -1; /* Cho canvas ở dưới nội dung trang */
-        }
-
+Demo
